version 1.0.4
=============

* adding new function to proper validation of IPv6 addresses
* fixing error: Notice: Undefined variable: errors in functions/load_lang.php on line 218

version 1.0.3
=============

* Default config value for $config->data_sql->set_charset changed to 'true'.

version 1.0.2
=============

* Allow applications to create customized smarty plugins. To do so the application
  should set variable $_SERWEB["smartypluginsdir"] to directory where are the
  customized plugins stored.

version 1.0.1
=============

* 'Filter' class used by data_layer get* functions now supports "in" operator.
* Adding support for optional "Reset" button to widgets/apu_filter_dropdown


Version 1.0.0
=============