@@ -1,3 +1,8 @@
+latest
+======
+
+* write unhandled PearErrorExceptions into logfile
+
 version 1.0.4
 =============
 
